<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Ввод города -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/town">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btnFetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/show_weather"
            android:layout_marginTop="@dimen/marginTop8"/>

        <!-- Параметры погоды -->
        <TextView
            android:id="@+id/tvCity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:textSize="@dimen/text24"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/marginTop16"/>

        <ImageView
            android:id="@+id/ivIcon"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="@dimen/marginTop8"/>

        <TextView
            android:id="@+id/tvTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus_cels"
            android:textSize="@dimen/text20"
            android:layout_marginTop="@dimen/marginTop8"/>

        <TextView
            android:id="@+id/tvDesc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/minus"
            android:layout_marginTop="@dimen/marginTop4"/>

        <TextView
            android:id="@+id/tvHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/humidity"
            android:layout_marginTop="@dimen/marginTop4"/>

        <TextView
            android:id="@+id/tvWind"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/wind"
            android:layout_marginTop="@dimen/marginTop4"/>
    </LinearLayout>
</ScrollView>
