<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:padding="@dimen/padding"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Preview фото -->
        <ImageView
            android:id="@+id/iv_photo_preview"
            android:layout_width="match_parent"
            android:layout_height="@dimen/layout_height200"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_photo_placeholder" />

        <Button
            android:id="@+id/btn_choose_photo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_photo"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/marginTop8"/>
        <!-- Название места -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:layout_marginTop="@dimen/marginTop8">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Новый ввод для создания категории -->
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="@dimen/layout_width"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/new_category">
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNewCategory"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnAddCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/plus"/>
        </LinearLayout>
        <!-- Список всех категорий с чекбоксами -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/category"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/marginTop12"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvCategories"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginTop="@dimen/marginTop4"/>
        <!-- Описание -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/description"
            android:layout_marginTop="@dimen/marginTop8">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Кнопки -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="@dimen/marginTop16">

            <Button
                android:id="@+id/btn_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btn_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginStart="@dimen/marginStart"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
