<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <RadioGroup
        android:id="@+id/rgTempUnit"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp">

        <RadioButton
            android:id="@+id/rbCelsius"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cels"/>

        <RadioButton
            android:id="@+id/rbFahrenheit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/far"
            android:layout_marginStart="16dp"/>
    </RadioGroup>

</LinearLayout>
