<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <!-- Выбор места -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/place"
            android:textStyle="bold"/>

        <Spinner
            android:id="@+id/spinnerPlaces"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <!-- Текст заметки -->
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/text_note"
            android:layout_marginTop="@dimen/marginTop12">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNoteText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>

        <!-- Кнопки -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="end"
            android:layout_marginTop="@dimen/marginTop">

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"/>

            <Button
                android:id="@+id/btnSave"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:layout_marginStart="@dimen/marginStart"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>
